# duckov-strategy

./: .env.production  .gitignore  next.config.ts  package-lock.json  package.json  proxy.ts  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/[locale]/: layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
app/actions/: cookies.ts
app/components/: ArchiveUpload.tsx  Buttons.tsx  ClientProxy.tsx  Header.tsx  ItemCard.tsx  ItemConstant.tsx  LanguageSwitcher.tsx  LocaleLink.tsx  MonsterCard.tsx  Pagination.tsx  QuesGraph.tsx  QuestControls.tsx  QuestList.tsx  SearchFilter.tsx
app/constants/: common.ts  index.ts  monster.ts  quality.ts  quest.ts
app/i18n/: client.ts  routing.ts
app/inventory/: page.tsx
app/monsters/: page.tsx
app/quests/: page.tsx
app/types/: global.ts  item.ts  monster.ts  quest.ts  router.ts
app/utils/: format.ts  lang.ts  monster.ts  request.ts
components/: theme-provider.tsx
lib/: getStatic.ts
public/: items.json  loot.json  quest.json
public/language/: chinesesimplified_Items.txt
public/prefabs/: 0.prefab  1.prefab  10.prefab  100.prefab  1000.prefab  1001.prefab  1002.prefab  1003.prefab  1004.prefab  1005.prefab  1006.prefab  1007.prefab  1008.prefab  1009.prefab  101.prefab  1010.prefab  1011.prefab  1012.prefab  1013.prefab  1015.prefab  1016.prefab  1017.prefab  1018.prefab  1019.prefab  102.prefab  1020.prefab  1021.prefab  1022.prefab  1023.prefab  1024.prefab  1025.prefab  (+931 more)
savefile-parse/: Cargo.toml
savefile-parse/src/: archived.rs  extractor.rs  format.rs  lib.rs
(+40 files in other folders)
