[package]
name = "savefile-parse"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.12.2"
#anyhow = "1.0"
wasm-bindgen = "0.2.105"
log = "0.4.28"
env_logger = "0.11.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.30"
console_error_panic_hook = "0.1.6"
console_log = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]